Camel: Can fail to connect when password contains non-ASCII letters
Evolution does not connect to the IMAP server from all-inkl.com, if the account password contains a german special character (ä, ö or ü). Switching off STARTTLS in Evolution does not help. Other accounts from all-inkl.com with passwords not containing special characters are working correctly with Evolution. The server address is w018c6a6.kasserver.com. I do not know which server software is running at all-inkl.com.
Milan (Thanks!) from evolution-list@gnome.org pointed to a very old bug 273626, closed as incomplete, discussing the same problem.
Please let me know if I can be of any assistance.
Evolution: 3.32.4 (3.32.4-1.fc30) on Fedora 30
Edited by Milan Crha