I#168 - Camel: Can fail to connect when password contains non-ASCII letters

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/issues/168